might fix overflow bug?

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,7 +1,8 @@
 @import './variables';
 
 .section {
-    overflow: hidden;
+    overflow-y: visible;
+    overflow-x: clip;
 
     .main {
         padding: 4rem 64px;
